@@ -12,8 +12,9 @@
                 <Label text="How many questions?"/>
                 <HBox id="inputField">
                     <TextField fx:id="numberOfQuestions"/>
-                    <Button fx:id="beginQuizButton" text="Begin Quiz" onAction="#beginQuiz"/>
+                    <Button id="verifyInputButton" text="Verify Input" onAction="#verifyInput"/>
                 </HBox>
+                <Button fx:id="beginQuizButton" text="Begin Quiz" onAction="#beginQuiz"/>
                 <Button text="All Questions" onAction="#beginQuizAllQuestions"/>
             </VBox>
             <Button fx:id="homeButton" text="Home" onAction="#returnHome"/>
