@@ -1,0 +1,11 @@
+- handle input errors from quizSelection page. Currently you can type
+  anything in. Needs to be able to accept 1 - size of db and correctly
+  handle everything else.
+
+- refactor variable names. Use of question(class), query, question string,
+  etc. overlap. Choose better name to use throughout app and db for
+  easier readability
+
+- add comments to everything, help to understand the flow
+
+- check classes to look for optimization
